--- a/src/emails/changeemail.html
+++ b/src/emails/changeemail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Change Username</title>
+    <title>Ada perubahan di sini</title>
 </head>
 <body>
     <h1>Success, {{x}} has changed</h1>
